<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_setting"
            android:icon="@drawable/nav_menu_setting"
            android:title="@string/nav_menu_setting" />
        <item
            android:id="@+id/nav_menu_about"
            android:icon="@drawable/nav_menu_about"
            android:title="@string/nav_menu_about" />
        <item
            android:id="@+id/nav_menu_update"
            android:icon="@drawable/nav_menu_update"
            android:title="@string/nav_menu_update" />
        <item
            android:id="@+id/nav_menu_logout"
            android:icon="@drawable/nav_menu_logout"
            android:title="@string/nav_menu_logout" />
    </group>

</menu>
